# sasrec-pytorch

./: .gitignore  EXERCISES.md  README.md  pyproject.toml  requirements.txt
data/: README.md
scripts/: evaluate.py  prepare_data.py  train.py
src/sasrec/: config.py  data.py  eval.py  losses.py  model.py  modules.py  train.py
tests/: test_data.py  test_metrics.py  test_model.py
