[project]
name = "sasrec-pytorch"
version = "0.1.0"
description = "A clean, from-scratch PyTorch reproduction of SASRec (Self-Attentive Sequential Recommendation, Kang & McAuley 2018), plus extensions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DoodlingAWorld" }]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",   # attention heatmaps / scaling plots
    "tqdm>=4.65",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
